# cpp-experiments

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  main.cpp
.github/workflows/: tests.yaml
arena/: CMakeLists.txt  README.md  main.cpp
arena/apps/: CMakeLists.txt
arena/benchmarks/: arena_benchmark.cpp
arena/include/: allocator.hpp
arena/src/: simple_arena.cpp
arena/tests/: object_arena_test.cpp
benchmarks/: CMakeLists.txt  arena_benchmark.cpp
include/: object_arena.hpp  simple_arena.hpp
src/: object_arena.cpp
tests/: CMakeLists.txt  allocator_test.cpp  simple_arena_test.cpp
